# ehixs

./: .gitignore  CMakeLists.txt  README  README.md
cmake_builds/: CMakeLists.txt  ehixs_config.h  run_all_sectors.py  runcard
src/: CMakeLists.txt  Foo.txt  bin.cpp  bin.h  cached_interpolator.cpp  cluster.h  convolutions.cpp  convolutions.h  cut.cpp  cut.h  decay.cpp  decay.h  ehixs.cpp  ehixs_config.h.in  exact_lo_inclusive.cpp  exact_lo_inclusive.h  gstar2.cpp  histogram.cpp  histogram.h  histograms.hpp  hub.cpp  hub.hpp  ihixs.cpp  interface_to_amplitudes.h  luminosity.cpp  luminosity.h  model.cpp  model.h  momenta.h  one_d_interpolator.cpp  particle.cpp  particle.h  pdf.cpp  pdf.h  process.cpp  process.h  production.cpp  production.h  sector.h  splitting_kernels.cpp  (+6 more)
src/avh_olo/: CMakeLists.txt  avh_olo_3div.f  avh_olo_func.f  avh_olo_hello.f
src/bottom_fusion/: BottomFusion.cpp  CMakeLists.txt  RVbbargHren0n.f  b_b_to_H_b_b.cpp  b_b_to_H_b_b.h  b_bbar_to_H_X.cpp  b_q_to_H_X.cpp  bg_to_H_X.cpp  bg_to_H_X.h  bottom_fusion.h  bottom_fusion_nlo_me.cpp  bottom_fusion_old.cpp  bottom_fusion_old.h  g_g_to_b_bbar_H.cpp  q_qbar_to_b_bbar_H.cpp
src/chaplin/: CMakeLists.txt  HPL1.f  HPL2arm1.f  HPL2else.f  HPL3ar0.f  HPL3ar1.f  HPL3arm1.f  HPL3atm1.f  HPL3else.f  HPL4.f  HPL4arm1.f  HPL4else.f  aux.f  basis.f  basisexp.f  basisfct.f  chaplin.h  coefficients.f
src/core/: CMakeLists.txt  cross_section.cpp  cross_section.h  decay.cpp  decay.h  process.cpp  process.h  production.cpp  production.h  sector.cpp  sector.h  xsection.cpp  xsection.h  xsectionmaker.h
src/decay_bb/: CMakeLists.txt  Decay_bb.cpp  Decay_bb.h
src/decay_h_to_gamma_gamma/: CMakeLists.txt  decay_h_to_gamma_gamma.cpp  decay_h_to_gamma_gamma.h
src/decay_wwzz/: CMakeLists.txt  decay_wwzz.cpp  decay_wwzz.h  higgs_zerfal.h  higgs_zerfall.f  higgs_zerfall_amplitudes.f
src/decay_z_gamma/: CMakeLists.txt  decay_z_gamma.cpp  decay_z_gamma.h
src/gamma_gamma/: CMakeLists.txt  gammagamma.cpp  gammagamma.h  gammagamma_me.cpp  gammagamma_me.h  qq2gammagammaX.cpp  qq2gammagammaX.h
src/gamma_star_gamma_star/: CMakeLists.txt  RR_from_maple.cpp  VV_coeffs_julian.mpl  VV_masters_from_maple.cpp  attempt_to_use_fede_phys.mw  brute_force_VV.mw  double_real.cpp  gamma_star_gamma_star.cpp  gamma_star_gamma_star.h  gamma_star_gamma_star_me.cpp  gamma_star_gamma_star_me.h  gstar2_V.mpl.mw  gstar2_amplitude.cpp  gstar2_amplitude.h  gtests.cpp  integrals_phys_dimensionless.mpl  integrals_phys_julian.mpl  kinematic_variables.cpp  kinematic_variables.h  one_loop_virtual_from_maple.cpp  one_loop_virtual_from_maple.txt  one_loop_virtual_imaginary_from_maple.cpp  one_loop_virtual_imaginary_from_maple.txt  one_loop_virtual_real_part_from_maple.cpp  real.cpp  reconstructing_VV_from_babis.mw  reconstructing_V_from_babis.mw  successful_pole_cancelation.mw  triple_collinear.mw  triple_collinear_done_right.mw  triple_collinear_with_romain_topology.mw  two_loop_VV_from_maple.cpp  two_loop_coefficients_from_maple.cpp  virtual_amplitude.cpp  virtual_amplitude.h
src/gluon_fusion/: CMakeLists.txt  GGF_Inclusive.cpp  GluonFusionInclusive.cpp  electroweak_h_plus_jet.f  fortran_interface_for_ggf_amplitudes.h  gluon_fusion.cpp  gluon_fusion.h  gluon_fusion_event_reconstructor.cpp  gluon_fusion_event_reconstructor.h  gluon_fusion_ew_coefficients.cpp  gluon_fusion_ew_coefficients.h  gluon_fusion_exact_coefficients.cpp  gluon_fusion_exact_coefficients.h  gluon_fusion_me.cpp  gluon_fusion_me.h  gluon_fusion_parametrization.cpp  gluon_fusion_parametrization.h  gluon_fusion_sector_box.cpp  gluon_fusion_sector_box.h  matrix_element.cpp  matrix_element.h  nlo_exact_matrix_elements.cpp  nlo_exact_matrix_elements.h  simple_sector.cpp  simple_sector.h
src/gluon_fusion_inclusive/: CMakeLists.txt  GluonFusionInclusive.cpp  GluonFusionInclusive.h  InclusiveProcess.cpp  InclusiveProduction.cpp  SingleIntegral.cpp  exact_lo_inclusive.cpp  exact_lo_inclusive.h  ihixs.cpp
src/gtests/: CMakeLists.txt  boxmaster_test.cpp  channel_tests.cpp  counterforge_test.cpp  cut_test.cpp  event_test.cpp  exact_virtual_test.cpp  expansion_test.cpp  fourvector_test.cpp  ggf_NNLO_q1q2_pole_cancelation_test.cpp  ggf_headers.h  ggf_nlo_gg_channel_xsection_test.cpp  ggf_nnlo_qq_test.cpp  ggf_nnlo_qqbar_test.cpp  ggf_pole_cancelation_nlo_test.cpp  gluon_gluon_nnlo_test.cpp  gluon_quark_nnlo_test.cpp  iggf.cpp  ihixs_eft.cpp  ihixs_nlo_exact_test.cpp  ihixs_tests.cpp  integration_tests.cpp  live_convolution_test.cpp  model_test.cpp  mypow_test.cpp  nlo_exact_test.cpp  off_line_histograming.cpp  one_d_interpolator_test.cpp  parser_test.cpp  pdf_test.cpp  pgenerator_test.cpp  qq2yy_test.cpp  qq2yyg_test.cpp  quark_gluon_nnlo_test.cpp  test_UI.cpp  test_utils.cpp  tests.cpp  xcodetest.h
src/higgs_zerfall/: higgs_zerfall.f  higgs_zerfall_amplitudes.f
src/ihixs/: inclusive_process.cpp  inclusive_process.h
src/ihixs_dir/: CMakeLists.txt  as_series.cpp  as_series.h  channel.cpp  channel.h  higgs_eft.cpp  higgs_eft.h  ihixs_ui.cpp  ihixs_ui.h  inclusive_process.cpp  inclusive_process.h  luminosity_integrals.cpp  luminosity_integrals.h  n3lo_reg_L_pieces_from_ste.F  new_luminosity.cpp  new_luminosity.h  result_pair.cpp  result_pair.h  sigma_term.cpp  sigma_term.h  wilson_coefficients.cpp  wilson_coefficients.h
src/kinematics/: CMakeLists.txt  bjorken.cpp  bjorken.h  fourvector.cpp  fourvector.h  invariants.cpp  invariants.h  isolationcone.cpp  isolationcone.h  lightcone.h  parametrizations.cpp  parametrizations.h  pgenerator.cpp  pgenerator.h  variables.h  xgenerator.cpp  xgenerator.h
src/legacy/: ExclusiveClass.cpp  InclusiveProcess.h  SingleIntegral.h  cluster.cpp  convolutions_total.cpp  cuts.hpp  jet.hpp  massive_ampls.F  masters.F  mlp.h  parametrizations.hpp  parser.cpp  parser_old.cpp  parser_old.hpp  quark.h  subtraction.hpp
src/main/: Production.cpp  ehixs.cpp
src/mincuba/: CMakeLists.txt  chi_square.cxx  common.cxx  cuba.h  erf.cxx  integrate.cxx  vegas.c  vegas.h
src/models/: Model.cpp  ParticleObject.cpp  QuarkObject.cpp  model.cpp  model.h  particle.cpp  (+1 more)
(+1665 files in other folders)
